# National-University-Computer-Competition-2026

./: .gitignore  Dockerfile  GUIDE.md  README.md  REPRODUCE.md  docker-compose.yml  pyproject.toml  test.sh  train.sh
.github/workflows/: ci.yml
app/: init.sh  test.sh  train.sh
app/code/src/: config.py  data_loader.py  ensemble.py  macro_industry.py  test.py
code/src/: config_quick.py  fundamental.py  market_gate.py  model.py  train.py  utils.py  walk_forward.py
data/: data_backfill_empty.txt  macro_meta.json
docs/adr/: ADR-1-transformer-over-gbdt.md  ADR-2-walk-forward-validation.md  ADR-3-quarter-aware-postprocess.md  ADR-4-2021-data-window.md
scripts/: backfill_history.py  fetch_fundamentals.py  fetch_fundamentals_v2.py  fetch_macro.py  fusion_test.py  gbdt_stacking.py  generate_report.py  get_stock_data.py  predict.py  run_optimized.py  run_quick_train.py  run_truncation_exp.py  score_self.py  self_eval.py  self_eval_ensemble.py  sync_to_docker.py  test.sh  train.sh  walk_forward_predict.py
tests/: conftest.py  test_integration.py  test_labels.py  test_loss.py  test_market_gate.py  test_model.py  test_utils.py
总结/: 2026-06-30-工作记录.md  2026-07-07-工作记录.md  2026-07-08-工作记录.md  2026-07-09-工作记录.md  2026-07-10-工作记录.md  2026-07-11-工作记录.md  2026-07-16-工作记录.md  2026-07-19-今日工作总结.md  2026-07-19-全量重训结果.md  2026-07-19-截断实验结论.md  2026-07-20-项目收尾工作总结.md  INDEX.md  改进方案.md
