[project]
name = "csi300-stock-ranking"
version = "0.8.0"
description = "沪深300指数预测 — 排序学习选股模型 (THU-BDC2026)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "akshare>=1.18.28",
    "baostock>=0.8.9",
    "docker>=7.1.0",
    "joblib>=1.5.2",
    "lightgbm>=4.0",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.8",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["code/src"]
